syntax = "proto3";
package data;

//services
message GetServicesMsg {}
message ServiceMsg {
    string id = 1;
    string service_group=2;
    string live_type = 3;
    string url = 4;
}
//push

message HeartBeatRequest{}

message HeartBeatReply{bool result=1;}

message Msg { string msg = 1; string kafka_topic=2;string kafka_key=3; }

message PushResult { bool result = 1; }